# action-vs-api-perf

./: .gitignore  README.md  package-lock.json  package.json
app/: action.ts  page.tsx
app/built-in-actions/: action-dispatcher.tsx  page.tsx
app/composed-functions/: action-dispatcher.tsx  composed-functions.ts  function2.ts  function4.ts  function5.ts  sleep.ts
app/simple/: route.ts
app/sleep/: page.tsx
app/sleep-2/: action-dispatcher.tsx  page.tsx
app/sleep-3/: action-dispatcher.tsx  function1.ts  function3.ts  page.tsx
app/sleep/api/: route.ts
data/: compare.py  plot.py  pyproject.toml  test.sh
data/action/: action_results.csv  post_results.csv
data/simple/: get_results.csv  post_results.csv
data/sleep/: action_results.csv  post_results.csv
